<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".workout.AddWorkoutFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:srcCompat="@drawable/back" />

                <ImageView
                    android:id="@+id/img_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/check" />

                <ImageView
                    android:id="@+id/img_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_toLeftOf="@+id/img_check"
                    android:padding="8dp"
                    app:srcCompat="@drawable/trash" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_second"
            android:fontFamily="@font/pacifico_regular"
            android:textSize="22sp"
            android:text="@string/excercise" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:background="@color/background"
                android:layout_height="wrap_content"
                android:hint="@string/ex_example" />

        </com.google.android.material.textfield.TextInputLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_second"
            android:fontFamily="@font/pacifico_regular"
            android:textSize="22sp"
            android:text="@string/weight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addWeightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poly_regular"

                android:textSize="30sp"
                android:layout_gravity="bottom"
                android:layout_weight="2"
                android:text="+" />

            <EditText
                android:id="@+id/editWeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="14"
                android:background="@drawable/edit_text_bottom_line"
                android:inputType="number" />

            <Button
                android:id="@+id/subtractWeightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poly_regular"
                android:textSize="30sp"
                android:layout_gravity="bottom"
                android:layout_weight="2"
                android:text="-" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_second"
            android:fontFamily="@font/pacifico_regular"
            android:textSize="22sp"
            android:text="@string/reps2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addRepsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poly_regular"
                android:textSize="30sp"
                android:layout_gravity="bottom"
                android:layout_weight="2"
                android:text="+" />

            <EditText
                android:id="@+id/editReps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="14"
                android:background="@drawable/edit_text_bottom_line"
                android:inputType="number" />

            <Button
                android:id="@+id/subtractRepsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poly_regular"
                android:textSize="30sp"
                android:layout_gravity="bottom"
                android:layout_weight="2"
                android:text="-" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>